Refactor `ExpressionManager` to enhance maintainability: replace outdated `ExpExpressionDescriptor` with `ExponentialExpressionDescriptor2`, add `BoundExpressionDescriptor`, streamline `evaluate` logic with `getFirst`, and add `@Serial` for serialization clarity.