@@ -97,7 +97,7 @@ public class ExpressionManager {
         descriptors.add(new DivisionExpressionDescriptor());
         descriptors.add(new PowExpressionDescriptor());
         descriptors.add(new PowExpressionDescriptor2());
-        descriptors.add(new ExpExpressionDescriptor());
+        descriptors.add(new ExponentialExpressionDescriptor2());
         descriptors.add(new SquareRootExpressionDescriptor());
 
         // cosh needs to come before cos in parsing. Same for others.
@@ -171,6 +171,7 @@ public class ExpressionManager {
         descriptors.add(new SwitchExpressionDescriptor());
 
         descriptors.add(new ClipExpressionDescriptor());
+        descriptors.add(new BoundExpressionDescriptor());
 
 //        Collections.sort(descriptor, new Comp());
         return descriptors;
@@ -203,6 +204,7 @@ public class ExpressionManager {
      * Addition
      */
     private static class AdditionExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -214,6 +216,7 @@ public class ExpressionManager {
         public Expression createExpression(Expression... expressions) throws ExpressionInitializationException {
             if (expressions.length > 0) {
                 return new AbstractExpression("+", Position.BOTH, expressions) {
+                    @Serial
                     private static final long serialVersionUID = 23L;
 
                     public double evaluate(Context context) {
@@ -243,6 +246,7 @@ public class ExpressionManager {
      * Addition
      */
     private static class SubtractionExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -254,18 +258,20 @@ public class ExpressionManager {
         public Expression createExpression(Expression... expressions) throws ExpressionInitializationException {
             if (expressions.length == 1) {
                 return new AbstractExpression("-", Position.INFIX, expressions) {
+                    @Serial
                     private static final long serialVersionUID = 23L;
 
                     public double evaluate(Context context) {
-                        return -getExpressions().get(0).evaluate(context);
+                        return -getExpressions().getFirst().evaluate(context);
                     }
                 };
             } else if (expressions.length == 2) {
                 return new AbstractExpression("-", Position.INFIX, expressions) {
+                    @Serial
                     private static final long serialVersionUID = 23L;
 
                     public double evaluate(Context context) {
-                        return getExpressions().get(0).evaluate(context) - getExpressions().get(1).evaluate(context);
+                        return getExpressions().getFirst().evaluate(context) - getExpressions().get(1).evaluate(context);
                     }
                 };
             }
@@ -279,6 +285,7 @@ public class ExpressionManager {
      * Ceil
      */
     private static class CeilExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -293,16 +300,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("ceil", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.ceil(getExpressions().get(0).evaluate(context));
+                    return FastMath.ceil(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class SignumExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -317,10 +326,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("signum", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.signum(getExpressions().get(0).evaluate(context));
+                    return FastMath.signum(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -330,6 +340,7 @@ public class ExpressionManager {
      * Cosine
      */
     private static class CosExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -344,16 +355,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("cos", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.cos(getExpressions().get(0).evaluate(context));
+                    return FastMath.cos(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class CoshExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -368,16 +381,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("cosh", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.cosh(getExpressions().get(0).evaluate(context));
+                    return FastMath.cosh(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class AcosExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -392,10 +407,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("acos", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.acos(getExpressions().get(0).evaluate(context));
+                    return FastMath.acos(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -406,6 +422,7 @@ public class ExpressionManager {
      * Flooor.
      */
     private static class FloorExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -420,10 +437,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("floor", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.floor(getExpressions().get(0).evaluate(context));
+                    return FastMath.floor(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -433,6 +451,7 @@ public class ExpressionManager {
      * Flooor.
      */
     private static class AbsoluteValueExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -447,16 +466,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("abs", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.abs(getExpressions().get(0).evaluate(context));
+                    return FastMath.abs(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class Log10ExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -471,10 +492,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("log10", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.log10(getExpressions().get(0).evaluate(context));
+                    return FastMath.log10(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -485,6 +507,7 @@ public class ExpressionManager {
      * Multiplication.
      */
     private static class MultiplicationExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -498,6 +521,7 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Must have at least two arguments.");
             }
             return new AbstractExpression("*", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -516,6 +540,7 @@ public class ExpressionManager {
      * Multiplication.
      */
     private static class DivisionExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -529,10 +554,11 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Must have two arguments.");
             }
             return new AbstractExpression("/", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return getExpressions().get(0).evaluate(context)
+                    return getExpressions().getFirst().evaluate(context)
                            / getExpressions().get(1).evaluate(context);
                 }
             };
@@ -544,6 +570,7 @@ public class ExpressionManager {
      * Natural log.
      */
     private static class NaturalLogExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -558,10 +585,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("ln", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.log(getExpressions().get(0).evaluate(context));
+                    return FastMath.log(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -571,6 +599,7 @@ public class ExpressionManager {
      * Random value.
      */
     private static class RandomExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -584,6 +613,7 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Random must have no arguments.");
             }
             return new AbstractExpression("random", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -597,6 +627,7 @@ public class ExpressionManager {
      * Round expression.
      */
     private static class RoundExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -611,10 +642,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("round", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.round(getExpressions().get(0).evaluate(context));
+                    return FastMath.round(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -625,6 +657,7 @@ public class ExpressionManager {
      * Tangent expression.
      */
     private static class TanExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -639,16 +672,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("tan", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.tan(getExpressions().get(0).evaluate(context));
+                    return FastMath.tan(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class TanhExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -663,16 +698,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("tanh", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.tanh(getExpressions().get(0).evaluate(context));
+                    return FastMath.tanh(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class AtanExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -687,16 +724,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("atan", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.atan(getExpressions().get(0).evaluate(context));
+                    return FastMath.atan(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class LogisticExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -711,10 +750,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("logistic", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    double t = getExpressions().get(0).evaluate(context);
+                    double t = getExpressions().getFirst().evaluate(context);
                     return 1.0 / (1.0 + FastMath.exp(-t));
                 }
             };
@@ -725,6 +765,7 @@ public class ExpressionManager {
      * Square Root.
      */
     private static class SquareRootExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -739,10 +780,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("sqrt", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.sqrt(getExpressions().get(0).evaluate(context));
+                    return FastMath.sqrt(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -752,6 +794,7 @@ public class ExpressionManager {
      * Sine expression.
      */
     private static class SinExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -766,16 +809,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("sin", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.sin(getExpressions().get(0).evaluate(context));
+                    return FastMath.sin(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class SinhExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -790,16 +835,18 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("sinh", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.sinh(getExpressions().get(0).evaluate(context));
+                    return FastMath.sinh(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
     }
 
     private static class AsinExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -814,10 +861,11 @@ public class ExpressionManager {
                                                             " argument.");
             }
             return new AbstractExpression("asin", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    return FastMath.asin(getExpressions().get(0).evaluate(context));
+                    return FastMath.asin(getExpressions().getFirst().evaluate(context));
                 }
             };
         }
@@ -829,6 +877,7 @@ public class ExpressionManager {
      * @author Tyler Gibson
      */
     private static class PowExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -844,10 +893,11 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("pow", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     Expression exp2 = getExpressions().get(1);
 
                     return FastMath.pow(exp1.evaluate(context), exp2.evaluate(context));
@@ -857,6 +907,7 @@ public class ExpressionManager {
     }
 
     private static class PowExpressionDescriptor2 extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -872,10 +923,11 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("^", Position.INFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     Expression exp2 = getExpressions().get(1);
 
                     return /*signum(exp1.evaluate(context)) **/ FastMath.pow(exp1.evaluate(context), exp2.evaluate(context));
@@ -884,32 +936,8 @@ public class ExpressionManager {
         }
     }
 
-    private static class ExpExpressionDescriptor extends AbstractExpressionDescriptor {
-        private static final long serialVersionUID = 23L;
-
-        public ExpExpressionDescriptor() {
-            super("Exponential", "exp", Position.PREFIX, false);
-        }
-
-        //=========================== Public Methods =========================//
-
-        public Expression createExpression(Expression... expressions) throws ExpressionInitializationException {
-            if (expressions.length != 1) {
-                throw new ExpressionInitializationException("Exp must have one argument.");
-            }
-
-            return new AbstractExpression("exp", Position.PREFIX, expressions) {
-                private static final long serialVersionUID = 23L;
-
-                public double evaluate(Context context) {
-                    Expression exp1 = getExpressions().get(0);
-                    return FastMath.exp(exp1.evaluate(context));
-                }
-            };
-        }
-    }
-
     private static class MaxExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -923,10 +951,11 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("max must have two or more arguments.");
             }
             return new AbstractExpression("max", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    double max = getExpressions().get(0).evaluate(context);
+                    double max = getExpressions().getFirst().evaluate(context);
                     for (int i = 1; i < getExpressions().size(); i++) {
                         double d = getExpressions().get(i).evaluate(context);
                         if (max < d) {
@@ -940,6 +969,7 @@ public class ExpressionManager {
     }
 
     private static class MinExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -953,10 +983,11 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("min must have two or more arguments.");
             }
             return new AbstractExpression("min", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    double min = getExpressions().get(0).evaluate(context);
+                    double min = getExpressions().getFirst().evaluate(context);
                     for (int i = 1; i < getExpressions().size(); i++) {
                         double d = getExpressions().get(i).evaluate(context);
                         if (d < min) {
@@ -970,6 +1001,7 @@ public class ExpressionManager {
     }
 
     private static class ChiSquareExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public ChiSquareExpressionDescriptor() {
@@ -984,18 +1016,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("ChiSquare", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     ChiSquaredDistribution distribution = new ChiSquaredDistribution(randomGenerator, e1);
                     return distribution.sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     return new ChiSquaredDistribution(randomGenerator, e1);
                 }
             };
@@ -1003,6 +1036,7 @@ public class ExpressionManager {
     }
 
     private static class GammaExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public GammaExpressionDescriptor() {
@@ -1017,11 +1051,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Gamma", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     GammaDistribution distribution = new GammaDistribution(randomGenerator, e1, e2);
                     return distribution.sample();
@@ -1029,7 +1064,7 @@ public class ExpressionManager {
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new GammaDistribution(randomGenerator, e1, e2);
                 }
@@ -1038,6 +1073,7 @@ public class ExpressionManager {
     }
 
     private static class BetaExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public BetaExpressionDescriptor() {
@@ -1052,18 +1088,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Beta", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new BetaDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new BetaDistribution(randomGenerator, e1, e2);
                 }
@@ -1072,6 +1109,7 @@ public class ExpressionManager {
     }
 
     private static class CauchyExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public CauchyExpressionDescriptor() {
@@ -1086,18 +1124,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Cauchy", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new CauchyDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new CauchyDistribution(randomGenerator, e1, e2);
                 }
@@ -1107,6 +1146,7 @@ public class ExpressionManager {
 
 
     private static class FExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public FExpressionDescriptor() {
@@ -1121,18 +1161,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("FDist", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new FDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new FDistribution(randomGenerator, e1, e2);
                 }
@@ -1141,6 +1182,7 @@ public class ExpressionManager {
     }
 
     private static class GumbelExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public GumbelExpressionDescriptor() {
@@ -1155,18 +1197,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Gumbel", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new GumbelDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new GumbelDistribution(randomGenerator, e1, e2);
                 }
@@ -1175,6 +1218,7 @@ public class ExpressionManager {
     }
 
     private static class LaplaceExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public LaplaceExpressionDescriptor() {
@@ -1189,18 +1233,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Laplace", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new LaplaceDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new LaplaceDistribution(randomGenerator, e1, e2);
                 }
@@ -1209,6 +1254,7 @@ public class ExpressionManager {
     }
 
     private static class LevyExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public LevyExpressionDescriptor() {
@@ -1223,18 +1269,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Levy", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new LevyDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new LevyDistribution(randomGenerator, e1, e2);
                 }
@@ -1243,6 +1290,7 @@ public class ExpressionManager {
     }
 
     private static class NakagamiExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public NakagamiExpressionDescriptor() {
@@ -1257,18 +1305,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Nakagami", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new NakagamiDistribution(randomGenerator, e1, e2, 1.0E-9D).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new NakagamiDistribution(randomGenerator, e1, e2, 1.0E-9D);
                 }
@@ -1277,6 +1326,7 @@ public class ExpressionManager {
     }
 
     private static class ParetoExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public ParetoExpressionDescriptor() {
@@ -1291,18 +1341,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Pareto", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new ParetoDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new ParetoDistribution(randomGenerator, e1, e2);
                 }
@@ -1311,6 +1362,7 @@ public class ExpressionManager {
     }
 
     private static class TriangularExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TriangularExpressionDescriptor() {
@@ -1325,11 +1377,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Triangular", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     double e3 = getExpressions().get(2).evaluate(context);
                     return new TriangularDistribution(randomGenerator, e1, e2, e3).sample();
@@ -1337,7 +1390,7 @@ public class ExpressionManager {
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     double e3 = getExpressions().get(2).evaluate(context);
                     return new TriangularDistribution(randomGenerator, e1, e2, e3);
@@ -1347,6 +1400,7 @@ public class ExpressionManager {
     }
 
     private static class UniformExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public UniformExpressionDescriptor() {
@@ -1361,18 +1415,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Uniform", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new UniformRealDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new UniformRealDistribution(randomGenerator, e1, e2);
                 }
@@ -1381,6 +1436,7 @@ public class ExpressionManager {
     }
 
     private static class UExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public UExpressionDescriptor() {
@@ -1395,18 +1451,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Uniform", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new UniformRealDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new UniformRealDistribution(randomGenerator, e1, e2);
                 }
@@ -1415,6 +1472,7 @@ public class ExpressionManager {
     }
 
     private static class WeibullExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public WeibullExpressionDescriptor() {
@@ -1429,18 +1487,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Weibull", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new WeibullDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new WeibullDistribution(randomGenerator, e1, e2);
                 }
@@ -1449,6 +1508,7 @@ public class ExpressionManager {
     }
 
     private static class PoissonExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public PoissonExpressionDescriptor() {
@@ -1463,11 +1523,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Poisson", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     double e1 = exp1.evaluate(context);
                     return new PoissonDistribution(randomGenerator, e1, 1.0E-12D, 10000000).sample();
                 }
@@ -1478,7 +1539,7 @@ public class ExpressionManager {
 
                 public IntegerDistribution getIntegerDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     double e1 = exp1.evaluate(context);
                     return new PoissonDistribution(randomGenerator, e1, 1.0E-12D, 10000000);
                 }
@@ -1487,6 +1548,7 @@ public class ExpressionManager {
     }
 
     private static class IndicatorExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public IndicatorExpressionDescriptor() {
@@ -1501,10 +1563,11 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Indicator", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     double p = exp1.evaluate(context);
 
                     if (p < 0 || p > 1) throw new IllegalArgumentException("p must be in [0, 1]: " + p);
@@ -1516,6 +1579,7 @@ public class ExpressionManager {
     }
 
     private static class ExponentialExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public ExponentialExpressionDescriptor() {
@@ -1535,7 +1599,7 @@ public class ExpressionManager {
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
 
                     double e1 = exp1.evaluate(context);
 
@@ -1545,7 +1609,50 @@ public class ExpressionManager {
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
+
+                    double e1 = exp1.evaluate(context);
+
+                    return new ExponentialDistribution(randomGenerator, e1);
+                }
+            };
+
+
+        }
+    }
+
+    private static class ExponentialExpressionDescriptor2 extends AbstractExpressionDescriptor {
+        @Serial
+        private static final long serialVersionUID = 23L;
+
+        public ExponentialExpressionDescriptor2() {
+            super("Exp", "Exp", Position.PREFIX, false);
+        }
+
+        //=========================== Public Methods =========================//
+
+        public Expression createExpression(Expression... expressions) throws ExpressionInitializationException {
+            if (expressions.length != 1) {
+                throw new ExpressionInitializationException("Exp must have one argument.");
+            }
+
+            return new AbstractExpression("Exp", Position.PREFIX, expressions) {
+                @Serial
+                private static final long serialVersionUID = 23L;
+
+                public double evaluate(Context context) {
+                    RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
+                    Expression exp1 = getExpressions().getFirst();
+
+                    double e1 = exp1.evaluate(context);
+
+                    ExponentialDistribution distribution = new ExponentialDistribution(randomGenerator, e1);
+                    return distribution.sample();
+                }
+
+                public RealDistribution getRealDistribution(Context context) {
+                    RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
+                    Expression exp1 = getExpressions().getFirst();
 
                     double e1 = exp1.evaluate(context);
 
@@ -1559,6 +1666,7 @@ public class ExpressionManager {
 
     // // "exp(Normal(0, 1))"
     private static class LogNormalExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public LogNormalExpressionDescriptor() {
@@ -1573,11 +1681,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("LogNormal", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     Expression exp2 = getExpressions().get(1);
 
                     double e1 = exp1.evaluate(context);
@@ -1589,7 +1698,7 @@ public class ExpressionManager {
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     Expression exp2 = getExpressions().get(1);
 
                     double e1 = exp1.evaluate(context);
@@ -1609,6 +1718,7 @@ public class ExpressionManager {
     }
 
     private static class NormalExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public NormalExpressionDescriptor() {
@@ -1623,18 +1733,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Normal", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new NormalDistribution(randomGenerator, e1, e2).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new NormalDistribution(randomGenerator, e1, e2);
                 }
@@ -1643,6 +1754,7 @@ public class ExpressionManager {
     }
 
     private static class TruncNormalExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TruncNormalExpressionDescriptor() {
@@ -1657,10 +1769,11 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("TruncNormal", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     Expression exp2 = getExpressions().get(1);
                     Expression exp3 = getExpressions().get(2);
                     Expression exp4 = getExpressions().get(3);
@@ -1684,6 +1797,7 @@ public class ExpressionManager {
     }
 
     private static class NExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public NExpressionDescriptor() {
@@ -1698,11 +1812,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("N", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     NormalDistribution distribution = new NormalDistribution(randomGenerator, e1, e2);
                     return distribution.sample();
@@ -1712,7 +1827,7 @@ public class ExpressionManager {
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    double e1 = getExpressions().get(0).evaluate(context);
+                    double e1 = getExpressions().getFirst().evaluate(context);
                     double e2 = getExpressions().get(1).evaluate(context);
                     return new NormalDistribution(randomGenerator, e1, e2);
                 }
@@ -1721,6 +1836,7 @@ public class ExpressionManager {
     }
 
     private static class DiscreteExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public DiscreteExpressionDescriptor() {
@@ -1735,6 +1851,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Discrete", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -1768,7 +1885,7 @@ public class ExpressionManager {
                     }
 
                     for (int i = 0; i < p.length; i++) {
-                        p[i] = p[i] /= sum;
+                        p[i] /= sum;
                     }
 
                     for (int i = 1; i < p.length; i++) {
@@ -1783,6 +1900,7 @@ public class ExpressionManager {
 
     // "0.3 * Normal(-2, 0.5) + 0.7 * Normal(2, 0.5)
     private static class MixtureDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public MixtureDescriptor() {
@@ -1797,6 +1915,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Mixture", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -1838,6 +1957,7 @@ public class ExpressionManager {
     }
 
     private static class StudentTExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public StudentTExpressionDescriptor() {
@@ -1852,18 +1972,19 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("StudentT", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     double e1 = exp1.evaluate(context);
                     return new TDistribution(randomGenerator, e1).sample();
                 }
 
                 public RealDistribution getRealDistribution(Context context) {
                     RandomGenerator randomGenerator = RandomUtil.getInstance().getRandomGenerator();
-                    Expression exp1 = getExpressions().get(0);
+                    Expression exp1 = getExpressions().getFirst();
                     double e1 = exp1.evaluate(context);
                     return new TDistribution(randomGenerator, e1);
                 }
@@ -1876,6 +1997,7 @@ public class ExpressionManager {
      * Draws from the U(a1, b2) U U(a3, a4)...
      */
     private static class SplitExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public SplitExpressionDescriptor() {
@@ -1890,6 +2012,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Split", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -1941,6 +2064,7 @@ public class ExpressionManager {
      * For boolean "and". Will return true if all sub-expressions evaluate to a non-zero value and false otherwise.
      */
     private static class AndExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
 
@@ -1954,6 +2078,7 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Must have at least two arguments.");
             }
             return new AbstractExpression("AND", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -1976,6 +2101,7 @@ public class ExpressionManager {
      * For boolean "Or". Will return 1.0 if at least one of the sub-expressions is non-zero.
      */
     private static class OrExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public OrExpressionDescriptor() {
@@ -1987,6 +2113,7 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Must have at least two arguments.");
             }
             return new AbstractExpression("OR", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2005,6 +2132,7 @@ public class ExpressionManager {
      * For boolean "Or". Will return 1.0 if at least one of the sub-expressions is non-zero.
      */
     private static class XOrExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public XOrExpressionDescriptor() {
@@ -2016,10 +2144,11 @@ public class ExpressionManager {
                 throw new ExpressionInitializationException("Must have two arguments.");
             }
             return new AbstractExpression("XOR", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
-                    double first = getExpressions().get(0).evaluate(context);
+                    double first = getExpressions().getFirst().evaluate(context);
                     double second = getExpressions().get(1).evaluate(context);
                     first = first == 1.0 ? 1.0 : 0.0;
                     second = second == 1.0 ? 1.0 : 0.0;
@@ -2031,6 +2160,7 @@ public class ExpressionManager {
     }
 
     private static class LessThanExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public LessThanExpressionDescriptor() {
@@ -2043,11 +2173,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("<", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     return a < b ? 1.0 : 0.0;
                 }
@@ -2056,6 +2187,7 @@ public class ExpressionManager {
     }
 
     private static class LessThanOrEqualExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public LessThanOrEqualExpressionDescriptor() {
@@ -2068,11 +2200,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("<=", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     return a <= b ? 1.0 : 0.0;
                 }
@@ -2081,6 +2214,7 @@ public class ExpressionManager {
     }
 
     private static class EqualsExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public EqualsExpressionDescriptor() {
@@ -2093,11 +2227,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("=", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     return a == b ? 1.0 : 0.0;
                 }
@@ -2106,6 +2241,7 @@ public class ExpressionManager {
     }
 
     private static class GreaterThanExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public GreaterThanExpressionDescriptor() {
@@ -2118,11 +2254,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("<", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     return a > b ? 1.0 : 0.0;
                 }
@@ -2131,6 +2268,7 @@ public class ExpressionManager {
     }
 
     private static class GreaterThanOrEqualExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public GreaterThanOrEqualExpressionDescriptor() {
@@ -2143,11 +2281,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("<", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     return a >= b ? 1.0 : 0.0;
                 }
@@ -2156,6 +2295,7 @@ public class ExpressionManager {
     }
 
     private static class IfExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public IfExpressionDescriptor() {
@@ -2168,11 +2308,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("IF", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     double c = expressions.get(2).evaluate(context);
                     return a == 1.0 ? b : c;
@@ -2182,6 +2323,7 @@ public class ExpressionManager {
     }
 
     private static class NewExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public NewExpressionDescriptor() {
@@ -2198,6 +2340,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("NEW", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2208,6 +2351,7 @@ public class ExpressionManager {
     }
 
     private static class NewExpressionDescriptor2 extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public NewExpressionDescriptor2() {
@@ -2224,6 +2368,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("new", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2234,6 +2379,7 @@ public class ExpressionManager {
     }
 
     private static class TSumExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TSumExpressionDescriptor() {
@@ -2246,6 +2392,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("TSUM", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2256,6 +2403,7 @@ public class ExpressionManager {
     }
 
     private static class TSumExpressionDescriptor2 extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TSumExpressionDescriptor2() {
@@ -2268,6 +2416,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("tsum", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2278,6 +2427,7 @@ public class ExpressionManager {
     }
 
     private static class TProductExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TProductExpressionDescriptor() {
@@ -2290,6 +2440,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("TPROD", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2300,6 +2451,7 @@ public class ExpressionManager {
     }
 
     private static class TProductExpressionDescriptor2 extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public TProductExpressionDescriptor2() {
@@ -2312,6 +2464,7 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("tprod", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
@@ -2325,6 +2478,7 @@ public class ExpressionManager {
     //First term should be a random draw that will be used to select a category index based on the (un-normalized)
     //weights given in the rest of the terms
     private static class DiscErrorExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public DiscErrorExpressionDescriptor() {
@@ -2339,11 +2493,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("DiscError", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     double[] p = new double[getExpressions().size() - 1];
-                    Expression errExp = getExpressions().get(0);
+                    Expression errExp = getExpressions().getFirst();
                     double err = errExp.evaluate(context);
                     String expPrint = "";
                     for (int i = 0; i < getExpressions().size() - 1; i++) {
@@ -2375,7 +2530,7 @@ public class ExpressionManager {
                     }
 
                     for (int i = 0; i < p.length; i++) {
-                        pout[i] = pout[i] /= sum;
+                        pout[i] /= sum;
                     }
 
                     for (int i = 1; i < p.length; i++) {
@@ -2391,6 +2546,7 @@ public class ExpressionManager {
     //the first term is an index (non-negative integer) that tells the expression which of the rest of the terms to
     //return
     private static class SwitchExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public SwitchExpressionDescriptor() {
@@ -2404,11 +2560,12 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("Switch", Position.BOTH, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
 
                     if (a % 1 != 0 || a < 0) {
                         throw new IllegalArgumentException("First term index must be non-negative integer");
@@ -2422,6 +2579,7 @@ public class ExpressionManager {
     }
 
     private static class ClipExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
         private static final long serialVersionUID = 23L;
 
         public ClipExpressionDescriptor() {
@@ -2435,16 +2593,54 @@ public class ExpressionManager {
             }
 
             return new AbstractExpression("clip", Position.PREFIX, expressions) {
+                @Serial
                 private static final long serialVersionUID = 23L;
 
                 public double evaluate(Context context) {
                     List<Expression> expressions = getExpressions();
-                    double a = expressions.get(0).evaluate(context);
+                    double a = expressions.getFirst().evaluate(context);
                     double b = expressions.get(1).evaluate(context);
                     double c = expressions.get(2).evaluate(context);
 
                     if (a < b) return b;
-                    if (a > c) return c;
+                    return Math.min(a, c);
+                }
+            };
+        }
+    }
+
+    private static class BoundExpressionDescriptor extends AbstractExpressionDescriptor {
+        @Serial
+        private static final long serialVersionUID = 23L;
+
+        public BoundExpressionDescriptor() {
+            super("bound", "bound", Position.PREFIX, true);
+        }
+
+        public Expression createExpression(Expression... expressions) throws ExpressionInitializationException {
+            if (expressions.length != 3) {
+                //should use IF for three args...
+                throw new ExpressionInitializationException("Must have at three arguments.");
+            }
+
+            return new AbstractExpression("bound", Position.PREFIX, expressions) {
+                @Serial
+                private static final long serialVersionUID = 23L;
+
+                public double evaluate(Context context) {
+                    List<Expression> expressions = getExpressions();
+                    double a = expressions.getFirst().evaluate(context);
+                    double b = expressions.get(1).evaluate(context);
+                    double c = expressions.get(2).evaluate(context);
+
+                    int count = 0;
+
+                    while (++count <= 1000) {
+                        if (a < b) continue;
+                        if (a > c) continue;
+                        break;
+                    }
+
                     return a;
                 }
             };
